# messages-actix

./: .env  .project  Cargo.toml  banco.sqlite  banco.sqlite3
migrations/2020-07-25-151437_create_comments/: up.sql
migrations/2020-07-27-001533_create_users/: up.sql
migrations/2020-10-17-010750_user_default_values/: down.sql  up.sql
migrations_old_postgresql/2020-07-24-233514_create_users/: up.sql
migrations_old_postgresql/2020-07-25-122822_create_posts/: up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  users.rs
src/routes/: comments.rs  posts.rs  users.rs
