[package]
name = "messages-actix"
version = "0.2.0"
authors = ["Leonardo Vilela Pinheiro <leonardo@vilelapinheiro.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
env_logger = "0.6"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "^1.4", features = ["postgres", "r2d2"] }
dotenv = "~0.15.0"

[profile.release]
lto = true