[package]
name = "messages-actix"
version = "0.3.0"
authors = ["Leonardo Vilela Pinheiro <leonardo@vilelapinheiro.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
env_logger = "0.6"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
serde = "1"
serde_json = "1"
serde_derive = "1"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "~0.15"

[profile.release]
lto = true
